# books.ai

./: .buildinfo  .gitattributes  .gitignore  IMPLEMENTATION_NOTES.md  LICENSE.rst  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.githooks/: pre-commit
.github/actions/install-dependencies-and-booksai/: action.yml
.github/workflows/: docs.yaml  python-app.yml
_modules/: index.html
_modules/booksai/: evaluation.html  recommender.html
_sources/api/: index.rst.txt
_sources/changes/: 0.0.0.rst.txt  index.rst.txt
_sources/example_notebooks/: index.rst.txt
_static/: documentation_options.js
_static/css/: custom copy.css
api/: index.html
changes/: 0.0.0.html  index.html
data/: README.md
data/demo_data/: demo_books.csv  demo_ratings.csv
docs/: AWS_DEPLOYMENT.md  Makefile  PERFORMANCE.md  architecture.drawio  conf.py  index.rst  make.bat  notesarch.md
docs/_static/js/: custom-header.js
docs/example_notebooks/: hello_world.ipynb
example_notebooks/: index.html
scripts/: api.py  book_recommender_demo.py  evaluate_models.py  generate_diagrams.py  recommend_example.py  recommender_api.py  test_api.sh  test_api_calls.sh  train_recommender.py
src/booksai/: __init__.py  _version.py  book_recomender.py  evaluation.py  hello_world.py  recommender.py
tests/: recommender_test.py  test_api.sh  test_api_extended.sh
